--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simple-feature-section",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://github.com/Mahdyrll/simple-feature-section/",
+  "homepage": "https://mahdyrll.github.io/simple-feature-section/",
   "type": "module",
   "scripts": {
     "predeploy" : "npm run build",
